@@ -388,7 +388,7 @@ dnl End of X configure
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_HEADER_STDBOOL
+#AC_HEADER_STDBOOL
 AC_HEADER_SYS_WAIT
 if test "x$WATCOM_C" != xyes ; then
 AC_HEADER_TIME
