@@ -308,7 +308,7 @@ endif
 version.$(OBJEXT): version.c ../configure
 	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(CFLAGS) -c $(srcdir)/version.c
 
-resample.c: newton_table.c
+$(srcdir)/resample.c: newton_table.c
 
 if VCPP
 newton_table.c: calcnewt$(EXEEXT)
